# habit_tracker

./: Dockerfile.backend  Dockerfile.bot  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/: auth.py  habits.py
backend/core/: dependencies.py  security.py
backend/crud/: habit.py  user.py
backend/db/: base.py  models.py  session.py
backend/schemas/: schemas.py
bot/: main.py  services.py
migrations/: env.py  script.py.mako
migrations/versions/: d466eea63556_создание_таблиц_пользователей_привычек_.py
