[project]
name = "habit-tracker"
version = "0.1.0"
description = "Чат-бот для трекинга привычек"
authors = [
    {name = "Vasiliy Plotnikov"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.12.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "pytelegrambotapi (>=4.15.0,<5.0.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "python-multipart (>=0.0.9,<0.0.10)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"